--- a/resources/views/components/_artist_grid.antlers.html
+++ b/resources/views/components/_artist_grid.antlers.html
@@ -1,4 +1,9 @@
+
+
+
+
 <div x-data="{ open: false }">
+    <!-- Trigger -->
     <div class="group relative aspect-square transform overflow-hidden rounded-2xl">
         <div 
              class="absolute bottom-6 left-0 right-4 top-0 rounded-2xl border transition duration-300 group-hover:scale-95 xl:right-6 border-blue-300">
@@ -14,48 +19,56 @@
     </div>
     <div >
         <h3 @click="open = !open" class="mt-8 font-display text-xl font-bold tracking-tight text-primary hover:cursor-pointer">{{ title }}</h3>
-        <div :class="{ 'line-clamp-3': !(open) }"
-             class="prose prose-p:text-xs">
+        <div  class="line-clamp-3 prose prose-p:text-xs">
             {{ bio }}
         </div>
-        <button type="button"
-                x-description="Expand/collapse question button"
-                class="flex w-full items-start justify-between text-left text-primary"
-                aria-controls="faq-{{ index }}"
-                @click="open = !open"
-                aria-expanded="true"
-                x-bind:aria-expanded="open.toString()">
-            <span class="text-sm font-semibold leading-7">Learn More</span>
-            <span class="ml-6 flex h-7 items-center">
-                <svg x-description="Icon when question is collapsed."
-                     x-state:on="Item expanded"
-                     x-state:off="Item collapsed"
-                     class="h-6 w-6 hidden"
-                     :class="{ 'hidden': open }"
-                     fill="none"
-                     viewBox="0 0 24 24"
-                     stroke-width="1.5"
-                     stroke="currentColor"
-                     aria-hidden="true">
-                    <path stroke-linecap="round"
-                          stroke-linejoin="round"
-                          d="M12 6v12m6-6H6"></path>
-                </svg>
-                <svg x-description="Icon when question is expanded."
-                     x-state:on="Item expanded"
-                     x-state:off="Item collapsed"
-                     class="h-6 w-6"
-                     :class="{ 'hidden': !(open) }"
-                     fill="none"
-                     viewBox="0 0 24 24"
-                     stroke-width="1.5"
-                     stroke="currentColor"
-                     aria-hidden="true">
-                    <path stroke-linecap="round"
-                          stroke-linejoin="round"
-                          d="M18 12H6"></path>
-                </svg>
-            </span>
-        </button>
+
+    </div>
+
+    <!-- Modal -->
+    <div
+        x-show="open"
+        style="display: none"
+        x-on:keydown.escape.prevent.stop="open = false"
+        role="dialog"
+        aria-modal="true"
+        x-id="['modal-title']"
+        :aria-labelledby="$id('modal-title')"
+        class="fixed inset-0 z-10 overflow-y-auto"
+    >
+        <!-- Overlay -->
+        <div x-show="open" x-transition.opacity class="fixed inset-0 bg-black bg-opacity-50"></div>
+
+        <!-- Panel -->
+        <div
+            x-show="open" x-transition
+            x-on:click="open = false"
+            class="relative flex min-h-screen items-center justify-center p-4"
+        >
+
+
+          
+            <div
+                x-on:click.stop
+                x-trap.noscroll.inert="open"
+                class="relative w-full max-w-xl overflow-y-auto rounded-xl bg-dark-blue p-12 shadow-lg"
+            >
+            <div class="absolute top-3 right-3 p-1 hover:cursor-pointer" x-on:click="open = false">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                  </svg>
+            </div>
+            <img alt="{{ title }}"
+            @click="open = !open"
+                src="{{ glide:portrait format="webp" fit="crop_focal" square="200" }}"
+                class="rounded-2xl object-cover">
+                <!-- Title -->
+                <h2 class="text-3xl font-bold" :id="$id('modal-title')">{{ title }}</h2>
+
+                <!-- Content -->
+               <article class="prose prose-p:text-sm">{{ bio }}</article>
+
+            </div>
+        </div>
     </div>
 </div>
