--- a/resources/views/components/_text.antlers.html
+++ b/resources/views/components/_text.antlers.html
@@ -5,6 +5,7 @@
 
 <!-- /components/_text.antlers.html -->
 <div class="max-w-3xl mx-auto prose-h1:text-primary">
+    {{# <h1 data-filter="goo-1" data-script="filter1" class="opacity-0 text-7xl">{{ intro_animation }}</h1> #}}
     {{ text }}
 </div>
 <!-- End: /components/_text.antlers.html -->
