--- a/resources/views/page_builder/_artists_grid.antlers.html
+++ b/resources/views/page_builder/_artists_grid.antlers.html
@@ -1,14 +1,15 @@
 {{#
-    @name Cards
-    @desc The Cards page builder block.
+    @name Artist grid
+    @desc The Artist grid page builder block.
     @set page.page_builder.cards
 #}}
 
-    <!-- /page_builder/_cards.antlers.html -->
+    <!-- /page_builder/_artists)grid.antlers.html -->
     {{ partial:page_builder/block }}
+    {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-center mb-8" } }}
     <div
          class="max-w-5xl mx-auto grid grid-cols-1 gap-x-8 gap-y-10 ui-not-focus-visible:outline-none sm:grid-cols-2 sm:gap-y-16 md:grid-cols-4" id="artists">
-        {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-center" } }}
+        
 
 
         {{ collection:artists sort="random" }}
@@ -23,4 +24,4 @@
 
     </div>
     {{ /partial:page_builder/block }}
-    <!-- End: /page_builder/_cards.antlers.html -->
+    <!-- End: /page_builder/_artists)grid.antlers.html -->
