--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1,11 +1,29 @@
 /* If you don't want to use the JS in CSS syntax from `tailwind.config.site.js` you can add your own custom CSS here. Use different layers to make sure your CSS either get's purged or not: https://tailwindcss.com/docs/functions-and-directives#layer. CSS in the base layer won't get purged. */
-@import "./components/text-animation.css";
+
 @layer base {
-    
+    html.lenis, html.lenis body {
+        height: auto;
+      }
+      
+      .lenis.lenis-smooth {
+        scroll-behavior: auto !important;
+      }
+      
+      .lenis.lenis-smooth [data-lenis-prevent] {
+        overscroll-behavior: contain;
+      }
+      
+      .lenis.lenis-stopped {
+        overflow: hidden;
+      }
+      
+      .lenis.lenis-smooth iframe {
+        pointer-events: none;
+      }
 }
 
 @layer components {
-    
+    @import "./components/text-animation.css";
 }
 
 @layer utilities {
