--- a/resources/views/components/_artist_grid.antlers.html
+++ b/resources/views/components/_artist_grid.antlers.html
@@ -1,8 +1,6 @@
 
 
-
-
-<div x-data="{ open: false }">
+<div x-data="{ open: false }" class="">
     <!-- Trigger -->
     <div class="group relative aspect-square transform overflow-hidden rounded-2xl">
         <div 
@@ -11,18 +9,30 @@
         <div class="absolute inset-0 bg-indigo-50"
              style="clip-path:url(#:R57qfja:-0)">
             <img alt=""
-             @click="open = !open"
+             @click="open = true"
+             
                  src="{{ glide:portrait format="webp" fit="crop_focal" square="400" }}"
                  width="600"
                  class="absolute inset-0 h-full w-full object-cover transition duration-300 group-hover:scale-110 hover:cursor-pointer">
         </div>
     </div>
     <div >
-        <h3 @click="open = !open" class="mt-8 font-display text-xl font-bold tracking-tight text-primary hover:cursor-pointer">{{ title }}</h3>
+        <h3 @click="open = true" class="mt-8 font-display text-xl font-bold tracking-tight text-primary hover:text-osmosis-orange transition hover:cursor-pointer">{{ title }}</h3>
         <div  class="line-clamp-3 prose prose-p:text-xs">
             {{ bio }}
         </div>
-
+        <div class="flex justify-between mt-3">
+            <button class="text-sm font-bold hover:text-osmosis-orange transition" @click="open = true">Read More</button>
+            <div>
+                {{ if social_media }}
+                <div class="flex gap-x-3">
+                    {{ social_media }}
+                        <a class="text-neutral" href="{{ prefix }}{{ handle }}" rel="noopener{{ type == 'mastodon' ?= ' me' }}" aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}" target="_blank">{{ svg :src="type" attr:class="w-4 h-4 overflow-visible fill-primary hover:fill-osmosis-orange transition" attr:alt="" attr:aria-hidden="true" }}</a>
+                    {{ /social_media }}
+                </div>
+            {{ /if }}
+            </div>
+        </div>
     </div>
 
     <!-- Modal -->
@@ -32,8 +42,8 @@
         x-on:keydown.escape.prevent.stop="open = false"
         role="dialog"
         aria-modal="true"
-        x-id="['modal-title']"
-        :aria-labelledby="$id('modal-title')"
+        x-id="['{{ title | slugify}}']"
+        :aria-labelledby="$id('{{ title | slugify}}')"
         class="fixed inset-0 z-10 overflow-y-auto"
     >
         <!-- Overlay -->
@@ -45,30 +55,46 @@
             x-on:click="open = false"
             class="relative flex min-h-screen items-center justify-center p-4"
         >
-
-
-          
+        
             <div
                 x-on:click.stop
                 x-trap.noscroll.inert="open"
-                class="relative w-full max-w-xl overflow-y-auto rounded-xl bg-dark-blue p-12 shadow-lg"
+                class="relative w-full max-w-2xl overflow-y-auto rounded-xl p-12 shadow-lg bg-dark-blue flex flex-col justify-start space-y-6"
             >
             <div class="absolute top-3 right-3 p-1 hover:cursor-pointer" x-on:click="open = false">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
                   </svg>
+                
             </div>
             <img alt="{{ title }}"
-            @click="open = !open"
-                src="{{ glide:portrait format="webp" fit="crop_focal" square="200" }}"
-                class="rounded-2xl object-cover">
+            src="{{ glide:portrait format="webp" fit="crop_focal" square="200" }}"
+            class="rounded-2xl object-contain mr-auto h-64">
                 <!-- Title -->
-                <h2 class="text-3xl font-bold" :id="$id('modal-title')">{{ title }}</h2>
-
+                <h2 class="text-3xl font-bold" :id="$id('{{ title | slugify }}')">{{ title }}</h2>
                 <!-- Content -->
-               <article class="prose prose-p:text-sm">{{ bio }}</article>
+
+                <article class="prose prose-p:text-sm">{{ bio }}</article>
+
+                <!-- Buttons -->
+                <div class="flex justify-between items-center">
+
+                    <div>
+                        {{ if social_media }}
+                        <div class="flex gap-x-3">
+                            {{ social_media }}
+                                <a class="text-neutral" href="{{ prefix }}{{ handle }}" rel="noopener{{ type == 'mastodon' ?= ' me' }}" aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}" target="_blank">{{ svg :src="type" attr:class="w-4 h-4 overflow-visible fill-primary hover:fill-osmosis-orange transition" attr:alt="" attr:aria-hidden="true" }}</a>
+                            {{ /social_media }}
+                        </div>
+                    {{ /if }}
+                    </div>
+                    <button type="button" x-on:click="open = false" class="rounded-md px-5 py-2.5">
+                        Close
+                    </button>
+                </div>
 
             </div>
         </div>
     </div>
 </div>
+
