--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -21,7 +21,7 @@
         </head>
 
         <body
-              class="flex flex-col min-h-screen bg-dark-blue text-primary selection:bg-primary selection:text-highlight-yellow">
+              class="flex flex-col min-h-screen bg-dark-blue text-primary selection:bg-primary/20 selection:text-highlight-yellow">
             {{ stack:seo_body }}
             {{ partial:statamic-peak-tools::snippets/noscript }}
             {{ partial:statamic-peak-tools::navigation/skip_to_content }}
@@ -30,12 +30,16 @@
             {{ partial:layout/header }}
             {{ template_content }}
             {{ partial:layout/footer }}
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+            {{# <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
                     integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
                     crossorigin="anonymous"
                     referrerpolicy="no-referrer"></script>
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollTrigger/1.0.6/ScrollTrigger.min.js" integrity="sha512-+LXqbM6YLduaaxq6kNcjMsQgZQUTdZp7FTaArWYFt1nxyFKlQSMdIF/WQ/VgsReERwRD8w/9H9cahFx25UDd+g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> #}}
+                    <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
+                    <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
             <script src="https://cdn.jsdelivr.net/npm/split-type@0.3.4/umd/index.min.js"></script>
-            {{ vite src="resources/js/text-animation.js" }}
+            {{ vite src="resources/js/effects/text-animation/text-animation-1.js" }}
+            {{ vite src="resources/js/effects/svg-filter/main.js" }}
         </body>
 
     </html>
