--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -5,11 +5,11 @@
 
     <!-- /layout/_header.antlers.html -->
     <header class="relative z-50 flex-none lg:pt-11">
-        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 flex flex-wrap items-center justify-center sm:justify-between lg:flex-nowrap"">
+        <div class="relative mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 flex flex-wrap items-center justify-center sm:justify-between lg:flex-nowrap"">
             {{# Make partials you want to use for the header or use and edit premade examples like the following ones. #}}
                 {{ partial:components/logo width="120" }}
                 <div
-                class="order-first -mx-4 flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-blue-600/10 py-4 font-mono text-sm text-blue-600 sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0">
+                class="absolute left-0 right-0  order-first -mx-4 flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-blue-600/10 py-4 font-mono text-sm text-blue-600 sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0">
                <div class="mx-auto flex items-center gap-4 px-4">
                    <p><time datetime="{{ configuration:start_date }}">{{ configuration:start_date format="M d" }}</time>-<time datetime="{{ configuration:start_date }}">{{ configuration:start_date format="d" }}</time></p>
                    <svg aria-hidden="true"
