--- a/resources/views/page_builder/_faq_from_entries.antlers.html
+++ b/resources/views/page_builder/_faq_from_entries.antlers.html
@@ -6,29 +6,29 @@
 
 <!-- /page_builder/_faq_entries.antlers.html -->
 {{ partial:page_builder/block }}
-    <div class="span-content grid md:grid-cols-12 divide-y divide-primary/10">
-        {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-center" } }}
-        <dl class="mt-10 space-y-3 divide-y divide-primary/10 md:col-span-6 md:col-start-4">
+    <div class="span-content grid md:grid-cols-12 divide-y divide-primary/10" id="information">
+        {{ block:title ?= { partial:typography/h2 :content="block:title" class="text-center" class="md:col-start-3 md:col-span-8 text-center" } }}
+        <dl class="mt-10 divide-y divide-primary/10 md:col-span-6 md:col-start-4">
         {{ block:faq_entries }}
 
             
                 <div {{ if first }}x-data="{ open: true }"{{ else }}x-data="{ open: false }"{{ /if }}
                     id="{{ slug }}"
-                     class="pt-3">
+                     class="">
                     <dt>
                         <button type="button"
                                 x-description="Expand/collapse question button"
-                                class="list__item flex w-full items-start justify-between text-left text-primary"
+                                class="py-3 group transition list__item flex w-full items-start justify-between text-left text-primary"
                                 aria-controls="faq-{{ index }}"
                                 @click="open = !open"
                                 aria-expanded="true"
                                 x-bind:aria-expanded="open.toString()">
-                            <span class="hover-effect text-base font-semibold leading-7">{{ title }}</span>
+                            <span class="hover-effect text-base font-semibold leading-7 group-hover:text-osmosis-orange transition">{{ title }}</span>
                             <span class="ml-6 flex h-7 items-center">
                                 <svg x-description="Icon when question is collapsed."
                                      x-state:on="Item expanded"
                                      x-state:off="Item collapsed"
-                                     class="h-6 w-6 hidden"
+                                     class="h-6 w-6 hidden group-hover:text-osmosis-orange transition"
                                      :class="{ 'hidden': open }"
                                      fill="none"
                                      viewBox="0 0 24 24"
@@ -42,7 +42,7 @@
                                 <svg x-description="Icon when question is expanded."
                                      x-state:on="Item expanded"
                                      x-state:off="Item collapsed"
-                                     class="h-6 w-6"
+                                     class="h-6 w-6 group-hover:text-osmosis-orange transition"
                                      :class="{ 'hidden': !(open) }"
                                      fill="none"
                                      viewBox="0 0 24 24"
