--- a/resources/views/typography/_h2.antlers.html
+++ b/resources/views/typography/_h2.antlers.html
@@ -8,5 +8,5 @@
 #}}
 
 <!-- /typography/_h2.antlers.html -->
-<{{ as or 'h2' }} class="text-2xl font-bold leading-tight {{ color or 'text-neutral' }} {{ class }}">{{ content | nl2br }}</{{ as or 'h2' }}>
+<{{ as or 'h2' }} data-filter="goo-1" data-script="filter1" style="opacity: 0" class="text-5xl font-bold leading-tight {{ color or 'text-primary' }} {{ class }}">{{ content | nl2br }}</{{ as or 'h2' }}>
 <!-- End: /typography/_h2.antlers.html -->
