--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -40,6 +40,7 @@
             <script src="https://cdn.jsdelivr.net/npm/split-type@0.3.4/umd/index.min.js"></script>
             {{ vite src="resources/js/effects/text-animation/text-animation-1.js" }}
             {{ vite src="resources/js/effects/svg-filter/main.js" }}
+            {{ vite src="resources/js/effects/svg-filter/filter1.js" }}
         </body>
 
     </html>
