header work and build work:

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1,5 +1,7 @@
 /* If you don't want to use the JS in CSS syntax from `tailwind.config.site.js` you can add your own custom CSS here. Use different layers to make sure your CSS either get's purged or not: https://tailwindcss.com/docs/functions-and-directives#layer. CSS in the base layer won't get purged. */
 
+/* @import "./components/text-animation.css"; */
+
 @layer base {
     html.lenis, html.lenis body {
         height: auto;
@@ -23,7 +25,7 @@
 }
 
 @layer components {
-    @import "./components/text-animation.css";
+    
 }
 
 @layer utilities {
