--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -1,29 +1,97 @@
-{{#
-    @name Header
-    @desc The sites header rendered on each page.
-#}}
+<header class="pt-6 sm:pt-10"
+        x-data="{ mobileNavOpen: false }"
+        @keyup.escape.stop.prevent="mobileNavOpen = false"
+        x-cloak>
+    <div class="relative">
+        <div
+             class="relative flex justify-between group/row relative isolate pt-[calc(theme(spacing.2)+1px)] last:pb-[calc(theme(spacing.2)+1px)]">
 
-    <!-- /layout/_header.antlers.html -->
-    <header class="relative z-50 flex-none lg:pt-11">
-        <div class="relative mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 flex flex-wrap items-center justify-center sm:justify-between lg:flex-nowrap"">
-            {{# Make partials you want to use for the header or use and edit premade examples like the following ones. #}}
-                {{ partial:components/logo width="120" }}
-                <div
-                class="absolute left-0 right-0  order-first -mx-4 flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-blue-600/10 py-4 font-mono text-sm text-blue-600 sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0">
-               <div class="mx-auto flex items-center gap-4 px-4">
-                   <p><time datetime="{{ configuration:start_date }}">{{ configuration:start_date format="M d" }}</time>-<time datetime="{{ configuration:start_date }}">{{ configuration:start_date format="d" }}</time></p>
-                   <svg aria-hidden="true"
-                        viewBox="0 0 6 6"
-                        class="h-1.5 w-1.5 overflow-visible fill-current stroke-current">
-                       <path d="M3 0L6 3L3 6L0 3Z"
-                             stroke-width="2"
-                             stroke-linejoin="round"></path>
-                   </svg>
-                   <p>{{ configuration:osmosis_simple_location }}</p>
-               </div>
+            <div>
+
+            </div>
+
+            <div
+            class="absolute left-0 right-0  order-first -mx-4 flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-primary/10 py-4 font-mono text-sm text-primary sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0">
+           <div class="mx-auto flex items-center gap-4 px-4">
+               <p><time datetime="{{ configuration:start_date }}">{{ configuration:start_date format="M d" }}</time>-<time datetime="{{ configuration:start_date }}">{{ configuration:start_date format="d" }}</time></p>
+               <svg aria-hidden="true"
+                    viewBox="0 0 6 6"
+                    class="h-1.5 w-1.5 overflow-visible fill-current stroke-current">
+                   <path d="M3 0L6 3L3 6L0 3Z"
+                         stroke-width="2"
+                         stroke-linejoin="round"></path>
+               </svg>
+               <p>{{ configuration:osmosis_simple_location }}</p>
            </div>
-                {{ partial:navigation/main }}
+       </div>
+            <nav class="relative hidden lg:flex">
+                {{# {{ social_media:social_media }}
+                <a class="flex items-center px-4 py-3 text-base font- text-primary bg-blend-multiply hover:bg-black/[2.5%]" href="{{ prefix }}{{ handle }}" rel="noopener{{ type == 'mastodon' ?= ' me' }}" aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}" target="_blank">Linked<span class="font-bold">in</span></a>
+            {{ /social_media:social_media }} #}}
+                {{ nav:main max_depth="2" include_home="true" select="title|url" }}
+
+                {{ unless no_results }}
+                <div class="relative flex group/item "><a
+                       class="flex items-center px-4 py-3 text-base font-medium text-primary bg-blend-multiply hover:bg-black/[2.5%]"
+                       href="{{ url }}">{{ title }}</a></div>
+                {{ /unless }}
+
+                {{ /nav:main }}
+
+                <div class="relative flex group/item "><svg viewBox="0 0 15 15"
+                    aria-hidden="true"
+                    class="hidden group-first/item:block absolute size-[15px] fill-black/10 -top-2 -left-2">
+                   <path d="M8 0H7V7H0V8H7V15H8V8H15V7H8V0Z"></path>
+               </svg><svg viewBox="0 0 15 15"
+                    aria-hidden="true"
+                    class="absolute size-[15px] fill-black/10 -top-2 -right-2">
+                   <path d="M8 0H7V7H0V8H7V15H8V8H15V7H8V0Z"></path>
+               </svg><svg viewBox="0 0 15 15"
+                    aria-hidden="true"
+                    class="hidden group-last/row:group-first/item:block absolute size-[15px] fill-black/10 -bottom-2 -left-2">
+                   <path d="M8 0H7V7H0V8H7V15H8V8H15V7H8V0Z"></path>
+               </svg><svg viewBox="0 0 15 15"
+                    aria-hidden="true"
+                    class="hidden group-last/row:block absolute size-[15px] fill-black/10 -bottom-2 -right-2">
+                   <path d="M8 0H7V7H0V8H7V15H8V8H15V7H8V0Z"></path>
+               </svg>                                    {{ social_media:social_media }}
+               <a class="flex items-center px-4 py-3 text-base font- text-primary bg-blend-multiply hover:bg-black/[2.5%]" href="{{ prefix }}{{ handle }}" rel="noopener{{ type == 'mastodon' ?= ' me' }}" aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}" target="_blank">{{ svg :src="type" attr:class="w-4 h-4 overflow-visible fill-current" attr:alt="" attr:aria-hidden="true" }}</a>
+           {{ /social_media:social_media }}</div>
+            </nav>
+            <button class="flex size-12 items-center justify-center self-center rounded-lg data-[hover]:bg-black/5 lg:hidden"
+                    aria-label="Open main menu"
+                    id="headlessui-disclosure-button-:Rsm6fkq:"
+                    type="button"
+                    aria-expanded="false"><svg xmlns="http://www.w3.org/2000/svg"
+                     viewBox="0 0 24 24"
+                     fill="currentColor"
+                     aria-hidden="true"
+                     data-slot="icon"
+                     class="size-8"
+                     @click="mobileNavOpen = !mobileNavOpen">
+                    <path fill-rule="evenodd"
+                          d="M3 9a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 9Zm0 6.75a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z"
+                          clip-rule="evenodd"></path>
+                </svg></button>
         </div>
-    </header>
-    <!-- End: /layout/_header.antlers.html -->
-    
+    </div>
+    <div class="lg:hidden"
+         id="headlessui-disclosure-panel-:R166fkq:"
+         x-show="mobileNavOpen"
+         x-collapse.duration.450ms
+         ">
+        <div class="flex flex-col gap-6 py-4">
+            {{ nav:main max_depth="2" include_home="true" select="title|url" }}
+            {{ unless no_results }}
+            <div style="opacity: 1; will-change: auto; transform: none;"><a class="text-base font-medium text-primary"
+                   href="{{ url }}">{{ title }}</a></div>
+            {{ /unless }}
+
+            {{ /nav:main }}
+        </div>
+        <div class="absolute left-1/2 w-screen -translate-x-1/2">
+            <div class="absolute inset-x-0 top-0 border-t border-black/5"></div>
+            <div class="absolute inset-x-0 top-2 border-t border-black/5"></div>
+        </div>
+    </div>
+</header>
