--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -38,23 +38,8 @@
 
                 {{ /nav:main }}
 
-                <div class="relative flex group/item "><svg viewBox="0 0 15 15"
-                    aria-hidden="true"
-                    class="hidden group-first/item:block absolute size-[15px] fill-black/10 -top-2 -left-2">
-                   <path d="M8 0H7V7H0V8H7V15H8V8H15V7H8V0Z"></path>
-               </svg><svg viewBox="0 0 15 15"
-                    aria-hidden="true"
-                    class="absolute size-[15px] fill-black/10 -top-2 -right-2">
-                   <path d="M8 0H7V7H0V8H7V15H8V8H15V7H8V0Z"></path>
-               </svg><svg viewBox="0 0 15 15"
-                    aria-hidden="true"
-                    class="hidden group-last/row:group-first/item:block absolute size-[15px] fill-black/10 -bottom-2 -left-2">
-                   <path d="M8 0H7V7H0V8H7V15H8V8H15V7H8V0Z"></path>
-               </svg><svg viewBox="0 0 15 15"
-                    aria-hidden="true"
-                    class="hidden group-last/row:block absolute size-[15px] fill-black/10 -bottom-2 -right-2">
-                   <path d="M8 0H7V7H0V8H7V15H8V8H15V7H8V0Z"></path>
-               </svg>                                    {{ social_media:social_media }}
+                <div class="relative flex group/item ">
+                    {{ social_media:social_media }}
                <a class="flex items-center px-4 py-3 text-base font- text-primary bg-blend-multiply hover:bg-black/[2.5%]" href="{{ prefix }}{{ handle }}" rel="noopener{{ type == 'mastodon' ?= ' me' }}" aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}" target="_blank">{{ svg :src="type" attr:class="w-4 h-4 overflow-visible fill-current" attr:alt="" attr:aria-hidden="true" }}</a>
            {{ /social_media:social_media }}</div>
             </nav>
