--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -17,7 +17,7 @@
         {{ partial:page_builder/block }}
         {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-center mb-8" } }}
         <div
-             class="max-w-5xl mx-auto grid grid-cols-1 gap-x-8 gap-y-10 ui-not-focus-visible:outline-none sm:grid-cols-2 sm:gap-y-16 md:grid-cols-4 pb-24" id="artists">
+             class="max-w-md mx-auto flex flex-wrap justify-center mb-12" id="artists">
             
     
     
