--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -8,11 +8,7 @@
     <div class="span-content flex flex-col gap-4 md:flex-row md:justify-between md:items-center">
         <div class="flex flex-col gap-4 md:flex-row text-xs font-bold">
             <span>
-                &copy; {{ configuration:copyright_since }}
-                {{ unless (now | format('Y')) == configuration:copyright_since }}
-                    - {{ now | format('Y') }}
-                    {{ /unless }}
-                {{ configuration:copyright_name ?? config:app:name }}
+                &copy; {{ now | format('Y') }} {{ configuration:copyright_name ?? config:app:name }}
             </span>
 
             {{# Let's users reset consent when you use the consent banner. #}}
