--- a/resources/views/components/_artist_grid.antlers.html
+++ b/resources/views/components/_artist_grid.antlers.html
@@ -35,7 +35,7 @@
         </div>
     </div> #}}
     
-    <button class="font-bold" @click="open = true">{{ title }}</button>
+    <button class="font-bold hover:text-osmosis-orange transition" @click="open = true">{{ title }}</button>
 
     <!-- Modal -->
     <div
