--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -37,7 +37,7 @@
                 {{ /unless }}
 
                 {{ /nav:main }}
-                    <a class="text-black bg-primary px-3 py-2 rounded-3xl font-bold transition hover:bg-osmosis-orange" href="{{ configuration:tickets_link }}">Buy Tickets</a>
+                    <a target="_blank" rel="" class="text-black bg-primary px-3 py-2 rounded-3xl font-bold transition hover:bg-osmosis-orange" href="{{ configuration:tickets_link }}">Buy Tickets</a>
                 
             </nav>
             <button class="flex size-12 items-center justify-center self-center rounded-lg data-[hover]:bg-black/5 lg:hidden"
