--- a/resources/views/page_builder/_artists_grid.antlers.html
+++ b/resources/views/page_builder/_artists_grid.antlers.html
@@ -6,7 +6,7 @@
 
     <!-- /page_builder/_artists)grid.antlers.html -->
     {{ partial:page_builder/block }}
-    {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-center mb-8" } }}
+    {{ block:title ?= { partial:typography/h2 :content="block:title" class="text-left mb-8" } }}
     <div
          class="max-w-5xl mx-auto " id="artists">
         
