--- a/resources/views/page_builder/_faq_from_entries.antlers.html
+++ b/resources/views/page_builder/_faq_from_entries.antlers.html
@@ -6,8 +6,8 @@
 
 <!-- /page_builder/_faq_entries.antlers.html -->
 {{ partial:page_builder/block }}
-    <div class="span-content grid md:grid-cols-12 divide-y divide-primary/10" id="information">
-        {{ block:title ?= { partial:typography/h2 :content="block:title" class="text-center" class="md:col-start-3 md:col-span-8 text-center" } }}
+    <div class="span-content max-w-xl mx-auto  divide-y divide-primary/10" id="information">
+        {{ block:title ?= { partial:typography/h2 :content="block:title" class="text-left" class=" text-left" } }}
         <dl class="mt-10 divide-y divide-primary/10 md:col-span-6 md:col-start-4">
         {{ block:faq_entries }}
 
