--- a/resources/views/components/_artist_grid.antlers.html
+++ b/resources/views/components/_artist_grid.antlers.html
@@ -1,6 +1,6 @@
 
 
-<div x-data="{ open: false }" class="inline-block px-3 text-center">
+<div x-data="{ open: false }" class="inline-block text-left">
     <!-- Trigger -->
     {{# <div class="group relative aspect-square transform overflow-hidden">
         <div 
@@ -35,7 +35,7 @@
         </div>
     </div> #}}
     
-    <button class="font-bold hover:text-osmosis-orange transition" @click="open = true">{{ title }}</button>
+    <button class="font-bold hover:text-osmosis-orange text-[32px] transition" @click="open = true">{{ title }}</button>
 
     <!-- Modal -->
     <div
@@ -61,7 +61,7 @@
             <div
                 x-on:click.stop
                 x-trap.noscroll.inert="open"
-                class="relative w-full max-w-2xl overflow-y-auto rounded-xl p-12 shadow-lg bg-dark-blue flex flex-col justify-start space-y-6"
+                class="relative w-full max-w-xl overflow-y-auto rounded-xl p-12 shadow-lg bg-dark-blue flex flex-col justify-start space-y-6"
             >
             <div class="absolute top-3 right-3 p-1 hover:cursor-pointer" x-on:click="open = false">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
@@ -71,7 +71,7 @@
             </div>
             <img alt="{{ title }}"
             src="{{ glide:portrait format="webp" fit="crop_focal" square="200" }}"
-            class="rounded-2xl object-contain mr-auto h-64">
+            class=" object-contain mr-auto h-64">
                 <!-- Title -->
                 <h2 class="text-3xl font-bold" :id="$id('{{ title | slugify }}')">{{ title }}</h2>
                 <!-- Content -->
@@ -90,7 +90,7 @@
                         </div>
                     {{ /if }}
                     </div>
-                    <button type="button" x-on:click="open = false" class="rounded-md border px-5 py-2.5">
+                    <button type="button" x-on:click="open = false" class="rounded-3xl bg-primary text-dark-blue font-bold hover:text-osmosis-orange px-3 py-2 transition">
                         Close
                     </button>
                 </div>
