--- a/resources/views/page_builder/_form.antlers.html
+++ b/resources/views/page_builder/_form.antlers.html
@@ -8,7 +8,7 @@
 {{ partial:page_builder/block }}
 
         <div class="mx-auto max-w-xl">
-            {{ block:title ?= { partial:typography/h2 :content="block:title" class="text-center" class="md:col-start-3 md:col-span-8 text-center" } }}
+            {{ block:title ?= { partial:typography/h2 :content="block:title" class="text-left" class=" text-left mb-10" } }}
         {{ block:text ?= { partial:typography/p :content="block:text" } }}
 
         {{# Render form and use Alpine based Statamic conditional logic. #}}
@@ -115,7 +115,7 @@
             {{# Call in the Peak Tools Alpine Based Precognition Form Handler. #}}
             {{ partial:statamic-peak-tools::snippets/form_handler }}
         {{ /if }}
-
+    </div>
 </div>
 {{ /partial:page_builder/block }}
 <!-- End: /page_builder/_form.antlers.html -->
