--- a/resources/views/page_builder/_block.antlers.html
+++ b/resources/views/page_builder/_block.antlers.html
@@ -3,6 +3,6 @@
 	@desc The page builder block wrapper
 #}}
 
-<section class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 {{ class }}">
+<section class="mx-auto max-w-7xl {{ class }}">
     {{ slot }}
 </section>
