--- a/resources/views/components/_side_nav.antlers.html
+++ b/resources/views/components/_side_nav.antlers.html
@@ -6,7 +6,7 @@
 <!-- statamic-peak-tools::components/_toolbar.antlers.html -->
 
         <aside
-            class="fixed flex flex-col h-screen z-50 top-10 left-10 text-xs divide-x divide-white shadow-sm divide-solid motion-safe:transition-opacity hover:opacity-100 has-[button:focus,a:focus]:opacity-100"
+            class="hidden fixed lg:flex flex-col h-screen z-50 top-10 left-10 text-xs divide-x divide-white shadow-sm divide-solid motion-safe:transition-opacity hover:opacity-100 has-[button:focus,a:focus]:opacity-100"
 
         >
         {{ partial:components/logo width="120" class="pb-12" }}
