--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -3,43 +3,44 @@
     @desc The default template with an outer wrapper grid as defined in tailwind.config.js. It makes sure all blocks on a page get evenly spaced without having to worry about margins or paddings.
 #}}
 <div class="relative mih-screen bg-[url('../../public/visuals/oitt_hero_bg.jpg')]" >
-{{# <img src="/visuals/oitt_hero_bg.jpg" alt=""> #}}
-<div class="absolute bg-dark-blue/70 h-full w-full"></div>
-    <div class="relative px-6 lg:px-8">
+    {{# <img src="/visuals/oitt_hero_bg.jpg" alt=""> #}}
+    <div class="absolute bg-dark-blue/70 h-full w-full"></div>
+        <div class="relative px-4 sm:px-6 lg:px-8">
+            
+            <div class="mx-auto relative">
+                {{ partial:layout/header }}
+    
+                <div class="pb-24 pt-16 sm:pb-24 sm:pt-24 md:pb-32 md:pt-24">
+                    <img data-filter="goo-1" data-script="filter1" style="opacity: 0" class="lg:w-2/3 mx-auto" src="visuals/oitt_full.svg" alt="">
+            </div>
+            </div>
+            {{ partial:page_builder/block }}
+            {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-left mb-8" } }}
+            <article class="prose mb-12 lg:mb-24 max-w-xl mx-auto">{{ header_paragraph }}</article>
+            <div
+                 class="max-w-xl mx-auto gap-x-10 flex-wrap flex mb-12 text-justify" id="artists">
+                
         
-        <div class="mx-auto relative">
-            {{ partial:layout/header }}
-
-            <div class="pb-24 pt-16 sm:pb-24 sm:pt-24 md:pb-32 md:pt-24">
-                <img data-filter="goo-1" data-script="filter1" style="opacity: 0" class="w-2/3 mx-auto" src="visuals/oitt_full.svg" alt="">
+                
+                {{ collection:artists sort="order" }}
+                    {{ partial:components/artist_grid }}
+                {{ /collection:artists }}
+        
+            </div>
+            {{ /partial:page_builder/block }}
         </div>
-        </div>
-        {{ partial:page_builder/block }}
-        {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-left mb-8" } }}
-        <article class="prose mb-24 max-w-xl mx-auto">{{ header_paragraph }}</article>
-        <div
-             class="max-w-xl mx-auto gap-x-4 flex-wrap flex mb-12" id="artists">
-            
-    
-            
-            {{ collection:artists sort="order" }}
-                {{ partial:components/artist_grid }}
-            {{ /collection:artists }}
-    
-        </div>
-        {{ /partial:page_builder/block }}
+        
     </div>
-    
-</div>
-<main class="py-12 md:py-16 lg:py-24 stack-12 md:stack-16 lg:stack-24" id="content">
-    
-
-        {{# <h2 data-filter="goo-1" data-script="filter1" style="opacity: 0" class="opacity-0 text-7xl">Wave</h2> #}}
+    <main class="py-12 md:py-16 lg:py-24 stack-12 md:stack-16 lg:stack-24 px-4 sm:px-6 lg:px-8" id="content">
         
-        {{# <h1 class="text-left text-5xl font-bold text-primary" data-filter="goo-1" data-script="filter1" style="opacity: 0" >OSMOSIS IN THE TREES</h1> #}}
-    {{ page_builder scope="block" }}
-        {{ partial src="page_builder/{type}" }}
-    {{ /page_builder }}
-</main>
-
-<!-- End: /default.antlers.html -->
+    
+            {{# <h2 data-filter="goo-1" data-script="filter1" style="opacity: 0" class="opacity-0 text-7xl">Wave</h2> #}}
+            
+            {{# <h1 class="text-left text-5xl font-bold text-primary" data-filter="goo-1" data-script="filter1" style="opacity: 0" >OSMOSIS IN THE TREES</h1> #}}
+        {{ page_builder scope="block" }}
+            {{ partial src="page_builder/{type}" }}
+        {{ /page_builder }}
+    </main>
+    
+    <!-- End: /default.antlers.html -->
+    
