--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -4,30 +4,34 @@
         x-cloak>
     <div class="relative">
         <div
-             class="relative flex justify-between group/row relative isolate pt-[calc(theme(spacing.2)+1px)] last:pb-[calc(theme(spacing.2)+1px)]">
-
+             class="relative flex justify-between group/row isolate pt-[calc(theme(spacing.2)+1px)] last:pb-[calc(theme(spacing.2)+1px)]">
             <div>
-
             </div>
-
             <div
-            class="absolute left-0 right-0  order-first -mx-4 flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-primary/10 py-4 font-mono text-sm text-primary sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0">
-           <div class="mx-auto flex items-center gap-4 px-4">
-               <p><time datetime="{{ configuration:start_date }}">{{ configuration:start_date format="M d" }}</time>-<time datetime="{{ configuration:start_date }}">{{ configuration:start_date format="d" }}</time></p>
-               <svg aria-hidden="true"
-                    viewBox="0 0 6 6"
-                    class="h-1.5 w-1.5 overflow-visible fill-current stroke-current">
-                   <path d="M3 0L6 3L3 6L0 3Z"
-                         stroke-width="2"
-                         stroke-linejoin="round"></path>
-               </svg>
-               <p>{{ configuration:osmosis_simple_location }}</p>
-           </div>
-       </div>
+                 class="hidden absolute left-0 right-0  order-first -mx-4 lg:flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-primary/10 py-4 font-mono text-sm text-primary sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0">
+                <div class="mx-auto flex items-center gap-4 px-4">
+                    <p><time
+                              datetime="{{ configuration:start_date }}">{{ configuration:start_date format="M d" }}</time>-<time
+                              datetime="{{ configuration:start_date }}">{{ configuration:start_date format="d" }}</time>
+                    </p>
+                    <svg aria-hidden="true"
+                         viewBox="0 0 6 6"
+                         class="h-1.5 w-1.5 overflow-visible fill-current stroke-current">
+                        <path d="M3 0L6 3L3 6L0 3Z"
+                              stroke-width="2"
+                              stroke-linejoin="round"></path>
+                    </svg>
+                    <p>{{ configuration:osmosis_simple_location }}</p>
+                </div>
+            </div>
             <nav class="relative hidden lg:flex space-x-6 text-sm">
                 {{ social_media:social_media }}
-                <a class="flex items-center  font- text-primary bg-blend-multiply hover:bg-black/[2.5%]" href="{{ prefix }}{{ handle }}" rel="noopener{{ type == 'mastodon' ?= ' me' }}" aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}" target="_blank">{{ svg :src="type" attr:class="w-4 h-4 overflow-visible fill-current transition hover:fill-osmosis-orange" attr:alt="" attr:aria-hidden="true" }}</a>
-            {{ /social_media:social_media }}
+                <a class="flex items-center  font- text-primary bg-blend-multiply hover:bg-black/[2.5%]"
+                   href="{{ prefix }}{{ handle }}"
+                   rel="noopener{{ type == 'mastodon' ?= ' me' }}"
+                   aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}"
+                   target="_blank">{{ svg :src="type" attr:class="w-4 h-4 overflow-visible fill-current transition hover:fill-osmosis-orange" attr:alt="" attr:aria-hidden="true" }}</a>
+                {{ /social_media:social_media }}
                 {{ nav:main max_depth="2" include_home="true" select="title|url" }}
 
                 {{ unless no_results }}
@@ -37,8 +41,11 @@
                 {{ /unless }}
 
                 {{ /nav:main }}
-                    <a target="_blank" rel="" class="text-black bg-primary px-3 py-2 rounded-3xl font-bold transition hover:bg-osmosis-orange" href="{{ configuration:tickets_link }}">Buy Tickets</a>
-                
+                <a target="_blank"
+                   rel=""
+                   class="text-black bg-primary px-3 py-2 rounded-3xl font-bold transition hover:bg-osmosis-orange"
+                   href="{{ configuration:tickets_link }}">Buy Tickets</a>
+
             </nav>
             <button class="flex size-12 items-center justify-center self-center rounded-lg data-[hover]:bg-black/5 lg:hidden"
                     aria-label="Open main menu"
@@ -60,20 +67,23 @@
     <div class="lg:hidden"
          id="headlessui-disclosure-panel-:R166fkq:"
          x-show="mobileNavOpen"
-         x-collapse.duration.450ms
-         ">
-        <div class="flex flex-col gap-6 py-4">
-            {{ nav:main max_depth="2" include_home="true" select="title|url" }}
-            {{ unless no_results }}
-            <div style="opacity: 1; will-change: auto; transform: none;"><a class="text-base font-medium text-primary"
-                   href="{{ url }}">{{ title }}</a></div>
-            {{ /unless }}
+         x-collapse.duration.450ms ">
+        <div class="
+         flex
+         flex-col
+         gap-6
+         py-4">
+        {{ nav:main max_depth="2" include_home="true" select="title|url" }}
+        {{ unless no_results }}
+        <div style="opacity: 1; will-change: auto; transform: none;"><a class="text-base font-medium text-primary"
+               href="{{ url }}">{{ title }}</a></div>
+        {{ /unless }}
 
-            {{ /nav:main }}
-        </div>
-        <div class="absolute left-1/2 w-screen -translate-x-1/2">
-            <div class="absolute inset-x-0 top-0 border-t border-black/5"></div>
-            <div class="absolute inset-x-0 top-2 border-t border-black/5"></div>
-        </div>
+        {{ /nav:main }}
+    </div>
+    <div class="absolute left-1/2 w-screen -translate-x-1/2">
+        <div class="absolute inset-x-0 top-0 border-t border-black/5"></div>
+        <div class="absolute inset-x-0 top-2 border-t border-black/5"></div>
+    </div>
     </div>
 </header>
