--- a/resources/views/components/_text.antlers.html
+++ b/resources/views/components/_text.antlers.html
@@ -4,7 +4,7 @@
 #}}
 
 <!-- /components/_text.antlers.html -->
-<div class="max-w-3xl mx-auto prose-h1:text-primary">
+<div class="max-w-3xl mx-auto prose-h1:text-primary px-4 sm:px-6 lg:px-8">
     {{# <h1 data-filter="goo-1" data-script="filter1" class="opacity-0 text-7xl">{{ intro_animation }}</h1> #}}
     {{ text }}
 </div>
