--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -5,20 +5,20 @@
 <div class="relative mih-screen bg-[url('../../public/visuals/oitt_hero_bg.jpg')]" >
     {{# <img src="/visuals/oitt_hero_bg.jpg" alt=""> #}}
     <div class="absolute bg-dark-blue/70 h-full w-full"></div>
-        <div class="relative px-4 sm:px-6 lg:px-8">
+        <div class="relative">
             
             <div class="mx-auto relative">
                 {{ partial:layout/header }}
     
-                <div class="pb-24 pt-16 sm:pb-24 sm:pt-24 md:pb-32 md:pt-24">
-                    <img data-filter="goo-1" data-script="filter1" style="opacity: 0" class="lg:w-2/3 mx-auto" src="visuals/oitt_full.svg" alt="">
+                <div class="pb-24 pt-16 sm:pb-24 sm:pt-24 md:pb-32 md:pt-24 px-4 sm:px-6 lg:px-8">
+                    <img data-filter="goo-1" data-script="filter1" style="opacity: 0" class="lg:w-2/3 mx-auto" src="visuals/oitt_full_darker.svg" alt="">
             </div>
             </div>
             {{ partial:page_builder/block }}
             {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-left mb-8" } }}
             <article class="prose mb-12 lg:mb-24 max-w-xl mx-auto">{{ header_paragraph }}</article>
             <div
-                 class="max-w-xl mx-auto gap-x-10 flex-wrap flex mb-12 text-justify" id="artists">
+                 class="max-w-xl mx-auto gap-x-10 flex-wrap flex mb-12 text-justify" id="artists ">
                 
         
                 
@@ -31,7 +31,7 @@
         </div>
         
     </div>
-    <main class="py-12 md:py-16 lg:py-24 stack-12 md:stack-16 lg:stack-24 px-4 sm:px-6 lg:px-8" id="content">
+    <main class="py-12 md:py-16 lg:py-24 stack-12 md:stack-16 lg:stack-24" id="content">
         
     
             {{# <h2 data-filter="goo-1" data-script="filter1" style="opacity: 0" class="opacity-0 text-7xl">Wave</h2> #}}
