--- a/resources/views/page_builder/_artists_grid.antlers.html
+++ b/resources/views/page_builder/_artists_grid.antlers.html
@@ -8,7 +8,7 @@
     {{ partial:page_builder/block }}
     {{ block:title ?= { partial:typography/h2 :content="block:title" class="text-left mb-8" } }}
     <div
-         class="max-w-5xl mx-auto " id="artists">
+         class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8" id="artists">
         
 
 
