--- a/resources/views/components/_button.antlers.html
+++ b/resources/views/components/_button.antlers.html
@@ -12,7 +12,7 @@
 {{ if label }}
     <{{ as or 'a' }}
         class="
-            inline-flex items-baseline gap-0.5 font-bold motion-safe:transition
+            inline-flex items-baseline gap-0.5 motion-safe:transition
             {{ switch(
                 (button_type === 'inline') => 'underline decoration-2 motion-safe:transition',
                 (button_type === 'button') => 'max-w-full py-3 px-4 rounded-3xl leading-none no-underline select-none whitespace-nowrap',
