--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -18,6 +18,12 @@
             {{ partial:statamic-peak-seo::snippets/seo }}
             {{ partial:statamic-peak-browser-appearance::snippets/browser_appearance }}
             {{ partial:statamic-peak-tools::snippets/live_preview }}
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&display=swap" rel="stylesheet">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400&display=swap" rel="stylesheet">
         </head>
 
         <body
