--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -9,7 +9,7 @@
             </div>
             <div
                  class="hidden absolute left-0 right-0  order-first -mx-4 lg:flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-primary/10 py-4 font-mono text-sm text-primary sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0">
-                <div class="mx-auto flex items-center gap-4 px-4">
+                <div class="mx-auto flex items-center gap-4 px-4 font-mono">
                     <p><time
                               datetime="{{ configuration:start_date }}">{{ configuration:start_date format="M d" }}</time>-<time
                               datetime="{{ configuration:start_date }}">{{ configuration:start_date format="d" }}</time>
