--- a/resources/views/page_builder/_artists_grid.antlers.html
+++ b/resources/views/page_builder/_artists_grid.antlers.html
@@ -6,9 +6,9 @@
 
     <!-- /page_builder/_artists)grid.antlers.html -->
     {{ partial:page_builder/block }}
-    {{ block:title ?= { partial:typography/h2 :content="block:title" class="text-left mb-8" } }}
+    {{ block:title ?= { partial:typography/h2 :content="block:title" class=" mb-8" } }}
     <div
-         class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8" id="artists">
+         class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 text-center" id="artists">
         
 
 
