--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -3,6 +3,18 @@
 /* @import "./components/text-animation.css"; */
 
 @layer base {
+    @font-face {
+        font-family: 'badger';
+        src: url('@/fonts/badger.otf') format('opentype');
+    }
+    button {
+        @apply font-mono;
+        @apply tracking-normal;
+        @apply leading-normal;
+    }
+    * {
+        @apply tracking-wide;
+    }
     html.lenis, html.lenis body {
         height: auto;
       }
