--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -18,7 +18,7 @@
             {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-left mb-8" } }}
             <article class="prose mb-12 lg:mb-24 max-w-xl mx-auto">{{ header_paragraph }}</article>
             <div
-                 class="max-w-xl mx-auto gap-x-10 flex-wrap flex mb-12 text-justify" id="artists ">
+                 class="max-w-xl mx-auto gap-x-10 flex-wrap flex justify-center mb-12 text-justify" id="artists ">
                 
         
                 
@@ -38,7 +38,7 @@
             
             {{# <h1 class="text-left text-5xl font-bold text-primary" data-filter="goo-1" data-script="filter1" style="opacity: 0" >OSMOSIS IN THE TREES</h1> #}}
         {{ page_builder scope="block" }}
-            {{ partial src="page_builder/{type}" }}
+            {{ partial src="page_builder/{type}" }} 
         {{ /page_builder }}
     </main>
     
