--- a/resources/views/page_builder/_faq_from_entries.antlers.html
+++ b/resources/views/page_builder/_faq_from_entries.antlers.html
@@ -56,7 +56,7 @@
                             </span>
                         </button>
                     </dt>
-                    <dd class="mt-3 pr-12 text-neutral prose prose-p:text-sm"
+                    <dd class="mt-3 mb-6 pr-12 text-neutral prose prose-p:text-sm"
                         id="faq-{{ index }}"
                         x-show="open"
                         x-collapse.duration.450ms
