--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -1,4 +1,4 @@
-<header class="pt-6 sm:pt-10"
+<header class="pt-6 sm:pt-10 font-mono"
         x-data="{ mobileNavOpen: false }"
         @keyup.escape.stop.prevent="mobileNavOpen = false"
         x-cloak>
@@ -44,7 +44,7 @@
                 <a target="_blank"
                    rel=""
                    class="text-black bg-primary px-3 py-2 rounded-3xl font-bold transition hover:bg-osmosis-orange"
-                   href="{{ configuration:tickets_link }}">Buy Tickets</a>
+                   href="{{ configuration:tickets_link }}">Buy tickets</a>
 
             </nav>
             <button class="flex size-12 items-center justify-center self-center rounded-lg data-[hover]:bg-black/5 lg:hidden"
