--- a/resources/views/components/_side_nav.antlers.html
+++ b/resources/views/components/_side_nav.antlers.html
@@ -6,11 +6,11 @@
 <!-- statamic-peak-tools::components/_toolbar.antlers.html -->
 
         <aside
-            class="hidden fixed lg:flex flex-col h-screen z-50 top-10 left-10 text-xs divide-x divide-white shadow-sm divide-solid motion-safe:transition-opacity hover:opacity-100 has-[button:focus,a:focus]:opacity-100"
+            class="hidden fixed lg:flex flex-col h-screen z-50 top-10 left-10 text-xs shadow-sm divide-solid motion-safe:transition-opacity hover:opacity-100 has-[button:focus,a:focus]:opacity-100 max-h-screen"
 
         >
         {{ partial:components/logo width="120" class="pb-12" }}
-        <img class="flex" src="/visuals/OITT24-poster-date 1.png" alt="">
+        <img class="max-w-[95px] mx-auto" src="/visuals/OITT24-poster-date.png" alt="">
         </aside>
 
 <!-- End: statamic-peak-tools::components/_toolbar.antlers.html -->
