--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -5,7 +5,7 @@
 
 <!-- /layout/_footer.antlers.html -->
 <footer class="fluid-grid py-4 mt-auto">
-    <div class="span-content flex flex-col gap-4 md:flex-row md:justify-between md:items-center">
+    <div class="span-content flex flex-col gap-4 md:flex-row md:justify-center md:items-center">
         <div class="flex flex-col gap-4 md:flex-row text-xs font-bold">
             <span>
                 &copy; {{ now | format('Y') }} {{ configuration:copyright_name ?? config:app:name }}
