--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -5,12 +5,12 @@
 <div class="relative mih-screen bg-[url('../../public/visuals/oitt_hero_bg.jpg')]" >
     {{# <img src="/visuals/oitt_hero_bg.jpg" alt=""> #}}
     <div class="absolute bg-dark-blue/70 h-full w-full"></div>
-        <div class="relative">
+        <div class="relative lg:pt-24">
             
             <div class="mx-auto relative">
-                {{ partial:layout/header }}
+                
     
-                <div class="pb-24 pt-16 sm:pb-24 sm:pt-24 md:pb-32 md:pt-24 px-4 sm:px-6 lg:px-8">
+                <div class="py-12 sm:pb-24 sm:pt-24 md:pb-32 md:pt-24 px-8 sm:px-6 lg:px-8">
                     <img data-filter="goo-1" data-script="filter1" style="opacity: 0" class="lg:w-2/3 mx-auto" src="visuals/oitt_full_darker.svg" alt="">
             </div>
             </div>
