--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -31,9 +31,8 @@
             {{ stack:seo_body }}
             {{ partial:statamic-peak-tools::snippets/noscript }}
             {{ partial:statamic-peak-tools::navigation/skip_to_content }}
-            {{ partial:components/side_nav }}
             {{ partial:components/svg_filter }}
-
+            {{ partial:layout/header }}
             {{ template_content }}
             {{ partial:layout/footer }}
             {{# <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
