--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -34,6 +34,13 @@
       .lenis.lenis-smooth iframe {
         pointer-events: none;
       }
+
+      .headroom--not-top .osmo {
+        display: none;
+      }
+      .headroom--top .osmo {
+        display: flex;
+      }
 }
 
 @layer components {
