--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -1,89 +1,34 @@
-<header class="pt-6 sm:pt-10 font-mono"
-        x-data="{ mobileNavOpen: false }"
-        @keyup.escape.stop.prevent="mobileNavOpen = false"
-        x-cloak>
-    <div class="relative">
-        <div
-             class="relative flex justify-between group/row isolate pt-[calc(theme(spacing.2)+1px)] last:pb-[calc(theme(spacing.2)+1px)] px-4 sm:px-6 lg:px-8">
-            <div>
-            </div>
-            <div
-                 class="hidden absolute left-0 right-0  order-first -mx-4 lg:flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-primary/10 py-4 font-mono text-sm text-primary sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0">
-                <div class="mx-auto flex items-center gap-4 px-4 font-mono">
-                    <p><time
-                              datetime="{{ configuration:start_date }}">{{ configuration:start_date format="M d" }}</time>-<time
-                              datetime="{{ configuration:start_date }}">{{ configuration:start_date format="d" }}</time>
-                    </p>
-                    <svg aria-hidden="true"
-                         viewBox="0 0 6 6"
-                         class="h-1.5 w-1.5 overflow-visible fill-current stroke-current">
-                        <path d="M3 0L6 3L3 6L0 3Z"
-                              stroke-width="2"
-                              stroke-linejoin="round"></path>
-                    </svg>
-                    <p>{{ configuration:osmosis_simple_location }}</p>
-                </div>
-            </div>
-            <nav class="relative hidden lg:flex space-x-6 text-sm">
-                {{ social_media:social_media }}
-                <a class="flex items-center  font- text-primary bg-blend-multiply hover:bg-black/[2.5%]"
-                   href="{{ prefix }}{{ handle }}"
-                   rel="noopener{{ type == 'mastodon' ?= ' me' }}"
-                   aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}"
-                   target="_blank">{{ svg :src="type" attr:class="w-4 h-4 overflow-visible fill-current transition hover:fill-osmosis-orange" attr:alt="" attr:aria-hidden="true" }}</a>
-                {{ /social_media:social_media }}
-                {{ nav:main max_depth="2" include_home="true" select="title|url" }}
+{{#
+    @name Header
+    @desc The sites header rendered on each page.
+#}}
 
-                {{ unless no_results }}
-                <div class="relative flex group/item "><a
-                       class="flex items-center  font-bold text-primary transition hover:text-osmosis-orange"
-                       href="{{ url }}">{{ title }}</a></div>
-                {{ /unless }}
-
-                {{ /nav:main }}
-                <a target="_blank"
-                   rel=""
-                   class="text-black bg-primary px-3 py-2 rounded-3xl font-bold transition hover:bg-osmosis-orange"
-                   href="{{ configuration:tickets_link }}">Buy tickets</a>
-
-            </nav>
-            <button class="flex size-12 items-center justify-center self-center rounded-lg data-[hover]:bg-black/5 lg:hidden"
-                    aria-label="Open main menu"
-                    id="headlessui-disclosure-button-:Rsm6fkq:"
-                    type="button"
-                    aria-expanded="false"><svg xmlns="http://www.w3.org/2000/svg"
-                     viewBox="0 0 24 24"
-                     fill="currentColor"
-                     aria-hidden="true"
-                     data-slot="icon"
-                     class="size-8"
-                     @click="mobileNavOpen = !mobileNavOpen">
-                    <path fill-rule="evenodd"
-                          d="M3 9a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 9Zm0 6.75a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z"
-                          clip-rule="evenodd"></path>
-                </svg></button>
+<!-- /layout/_header.antlers.html -->
+<header class="fixed w-full z-50 px-8 py-4">
+    <div class="span-content flex justify-between items-start">
+        {{# Make partials you want to use for the header or use and edit premade examples like the following ones. #}}
+        <div class="relative flex flex-col">
+        {{ partial:components/logo width="120" class="hidden lg:flex" }}
+        <img class="max-w-[95px] mx-auto mt-8" src="/visuals/OITT24-poster-date.png" alt="">
         </div>
-    </div>
-    <div class="lg:hidden"
-         id="headlessui-disclosure-panel-:R166fkq:"
-         x-show="mobileNavOpen"
-         x-collapse.duration.450ms ">
-        <div class="
-         flex
-         flex-col
-         gap-6
-         py-4">
-        {{ nav:main max_depth="2" include_home="true" select="title|url" }}
-        {{ unless no_results }}
-        <div style="opacity: 1; will-change: auto; transform: none;"><a class="text-base font-medium text-primary"
-               href="{{ url }}">{{ title }}</a></div>
-        {{ /unless }}
-
-        {{ /nav:main }}
-    </div>
-    <div class="absolute left-1/2 w-screen -translate-x-1/2">
-        <div class="absolute inset-x-0 top-0 border-t border-black/5"></div>
-        <div class="absolute inset-x-0 top-2 border-t border-black/5"></div>
-    </div>
+        <div
+        class="osmo hidden absolute left-0 right-0 mt-3 order-first -mx-4 lg:flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-primary/10 py-4 font-mono text-sm text-primary sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0">
+       <div class="mx-auto flex items-center gap-4 px-4 font-mono">
+           <p><time
+                     datetime="{{ configuration:start_date }}">{{ configuration:start_date format="M d" }}</time>-<time
+                     datetime="{{ configuration:start_date }}">{{ configuration:start_date format="d" }}</time>
+           </p>
+           <svg aria-hidden="true"
+                viewBox="0 0 6 6"
+                class="h-1.5 w-1.5 overflow-visible fill-current stroke-current">
+               <path d="M3 0L6 3L3 6L0 3Z"
+                     stroke-width="2"
+                     stroke-linejoin="round"></path>
+           </svg>
+           <p>{{ configuration:osmosis_simple_location }}</p>
+       </div>
+   </div>
+        {{ partial:navigation/main }}
     </div>
 </header>
+<!-- End: /layout/_header.antlers.html -->
