--- a/resources/views/navigation/_main_mobile.antlers.html
+++ b/resources/views/navigation/_main_mobile.antlers.html
@@ -14,76 +14,60 @@
 >
     <button
         @click.prevent.stop="mobileNavOpen = !mobileNavOpen"
-        class="fixed bottom-0 right-0 z-30 flex items-center justify-center w-16 h-16 mr-8 text-xs font-bold text-white mb-safe rounded bg-primary"
+        class="fixed bottom-4 right-4 z-30 "
         :aria-label="mobileNavOpen ? '{{ trans:strings.nav_close }}' : '{{ trans:strings.nav_open }}'"
         :aria-expanded="mobileNavOpen"
-        x-text="mobileNavOpen ? '{{ trans:strings.close }}' : '{{ trans:strings.menu }}'"
-    ></button>
+       
+    >{{ partial:components/logo width="120" class="z-50"}}</button>
 
     <div
-        class="fixed inset-0 z-20 pt-8 px-8 pb-12 flex flex-col justify-end bg-white"
+        class="fixed inset-0 z-20 pt-8 px-8 pb-12 flex flex-col justify-end bg-dark-blue/90"
         x-show="mobileNavOpen"
         x-transition.origin.bottom.right
     >
-        <ul class="flex flex-col py-2 gap-y-4 overflow-auto">
+        <ul class="flex flex-col py-2 gap-y-3 overflow-auto mb-8">
             {{ nav:main max_depth="2" include_home="true" select="title|url" }}
                 {{ unless no_results }}
-                    <li
-                        {{ if children }}
-                            x-data="{ subnavOpen: $root.querySelector('[aria-current=page]') ? true : false }"
-                            @focusin.window="!$refs.subnav.contains($event.target) && (subnavOpen = false)"
-                        {{ /if }}
-                        class="leading-none"
+                {{ nav:main max_depth="2" include_home="true" select="title|url" }}
+                {{ unless no_results }}
+                        <li
+                        class="relative leading-none"
                     >
                         <a
+                            @click="mobileNavOpen = false"  
                             class="
-                                w-full py-2 flex items-center gap-x-1 text-lg font-bold hover:text-primary
-                                {{ is_current || is_parent ? 'text-primary' : 'text-neutral' }}
-                            "
-                            {{ if children }}
-                                href="#"
-                                @click.prevent="subnavOpen = !subnavOpen"
-                                @click.outside="subnavOpen = false"
-                                :aria-label="subnavOpen ? '{{ trans:strings.subnav_close }}' : '{{ trans:strings.subnav_open }}'"
-                                :aria-expanded="subnavOpen"
-                            {{ else }}
-                                href="{{ url }}"
-                            {{ /if }}
-                            {{ is_current ?= 'aria-current="page"' }}
+                                flex items-center font-mono text-lg hover:text-primary"
+                                href="/#artists"
+                            
+                    
                         >
-                            <span>{{ title }}</span>
+                            Artists
 
-                            {{ if children }}
-                                <div :class="{ 'scale-y-[-1]': subnavOpen }" class="motion-safe:transition-transform">
-                                    {{ svg:chevron_down attr:class="w-2 ml-1 overflow-visible stroke-current text-neutral" attr:aria-hidden="true" }}
-                                </div>
-                            {{ /if }}
                         </a>
 
-                        {{ if children }}
-                            <ul
-                                x-show="subnavOpen"
-                                x-ref="subnav"
-                                class="flex flex-col items-stretch gap-y-2"
-                                x-collapse
-                            >
-                                {{ children }}
-                                    <li class="{{ first ?= 'mt-2' }}">
-                                        <a
-                                            class="
-                                                block py-2 whitespace-nowrap font-bold hover:text-primary
-                                                {{ is_current || is_parent ? 'text-primary' : 'text-neutral' }}
-                                            "
-                                            href="{{ url }}"
-                                            {{ is_current ?= 'aria-current="page"' }}
-                                        >
-                                            {{ title }}
-                                        </a>
-                                    </li>
-                                {{ /children }}
-                            </ul>
-                        {{ /if }}
+
+                        
                     </li>
+                    <li
+                        class="relative leading-none"
+                    >
+                        <a
+                            @click="mobileNavOpen = false"
+                            class="
+                                flex items-center font-mono text-lg hover:text-primary"
+                                href="#{{ title | slugify }}"
+                            
+                    
+                        >
+                            {{ title }}
+    
+                        </a>
+    
+    
+                        
+                    </li>
+                {{ /unless }}
+            {{ /nav:main }}
                 {{ /unless }}
             {{ /nav:main }}
         </ul>
