fix to artist link

--- a/resources/views/navigation/_main_mobile.antlers.html
+++ b/resources/views/navigation/_main_mobile.antlers.html
@@ -37,7 +37,7 @@
                             @click="mobileNavOpen = false"  
                             class="
                                 flex items-center font-mono text-lg hover:text-primary"
-                                href="/#artists"
+                                href="#artists"
                             
                     
                         >
