--- a/resources/views/navigation/_main_desktop.antlers.html
+++ b/resources/views/navigation/_main_desktop.antlers.html
@@ -4,7 +4,7 @@
 #}}
 
 <!-- /navigation/_main_desktop.antlers.html -->
-<nav class="hidden md:block" aria-label="{{ trans:strings.main_navigation }}">
+<nav class="hidden lg:block lg:z-50" aria-label="{{ trans:strings.main_navigation }}">
     <ul class="flex items-center gap-x-8">
         {{ social_media:social_media }}
         <a class="flex items-center osmo text-primary bg-blend-multiply hover:bg-black/[2.5%]"
@@ -20,7 +20,7 @@
                 >
                     <a
                         class="
-                            osmo flex items-center font-mono text-sm hover:text-primary"
+                            osmo flex items-center font-mono text-sm hover:text-osmosis-orange"
                             href="#{{ title | slugify }}"
                         
                 
