--- a/resources/views/page_builder/_artists_grid.antlers.html
+++ b/resources/views/page_builder/_artists_grid.antlers.html
@@ -14,7 +14,7 @@
 
         {{ collection:artists }}
         
-            {{ partial:components/artist_grid }}
+            {{ partial:components/artist_grid sort="title"}}
         {{ /collection:artists }}
 
     </div>
