--- a/resources/views/page_builder/_block.antlers.html
+++ b/resources/views/page_builder/_block.antlers.html
@@ -3,6 +3,6 @@
 	@desc The page builder block wrapper
 #}}
 
-<section class="mx-auto max-w-7xl px-8 sm:px-6 lg:px-8 lg:z-50 {{ class }}">
+<section class="mx-auto max-w-7xl px-8 sm:px-6 lg:px-8 z-10 {{ class }}">
     {{ slot }}
 </section>
