--- a/resources/views/components/_artist_grid.antlers.html
+++ b/resources/views/components/_artist_grid.antlers.html
@@ -35,7 +35,7 @@
         </div>
     </div> #}}
     
-    <button class="font-bold text-osmosis-neutral hover:text-osmosis-orange text-lg lg:text-2xl text-left transition uppercase tracking-wide" @click="open = true">{{ title }}</button>
+    <button class="font-bold text-osmosis-neutral hover:text-osmosis-orange text-lg lg:text-2xl text-left transition uppercase tracking-wide font-artist" @click="open = true">{{ title }}</button>
 
     <!-- Modal -->
     <div
@@ -46,7 +46,7 @@
         aria-modal="true"
         x-id="['{{ title | slugify}}']"
         :aria-labelledby="$id('{{ title | slugify}}')"
-        class="fixed inset-0 z-10 overflow-y-auto"
+        class="fixed inset-0 z-20 overflow-y-auto"
     >
         <!-- Overlay -->
         <div x-show="open" x-transition.opacity class="fixed inset-0 bg-black bg-opacity-50"></div>
@@ -90,7 +90,7 @@
                         </div>
                     {{ /if }}
                     </div>
-                    <button type="button" x-on:click="open = false" class="rounded-3xl bg-primary text-dark-blue font-bold hover:text-osmosis-orange px-3 py-2 transition">
+                    <button type="button" x-on:click="open = false" class="rounded-3xl bg-primary text-dark-blue font-mono text-sm hover:bg-osmosis-orange px-3 py-2 transition">
                         Close
                     </button>
                 </div>
