--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -4,7 +4,7 @@
 #}}
 
 <!-- /layout/_header.antlers.html -->
-<header class="fixed w-full z-10 px-8 py-4">
+<header class="fixed w-full z-10 px-8 lg:py-4">
     <div class="span-content flex justify-between items-start">
         {{# Make partials you want to use for the header or use and edit premade examples like the following ones. #}}
         <div class="relative hidden lg:flex flex-col">
@@ -12,8 +12,8 @@
         <img class="max-w-[95px] mx-auto mt-8 absolute top-16 left-2" src="/visuals/OITT24-poster-date.png" alt="">
         </div>
         <div
-        class="osmo hidden lg:absolute left-0 right-0 mt-3 order-first -mx-4 lg:flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-primary/10 py-4 font-mono text-sm text-primary sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0">
-       <div class="mx-auto flex items-center gap-4 px-4 font-mono">
+        class="osmo text-center absolute left-0 right-0 mt-3 order-first -mx-4 lg:flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-primary/10 py-4 font-mono text-sm text-primary sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0 z-10">
+       <div class="mx-auto flex items-center content-center justify-center gap-4 px-4 font-mono">
            <p><time
                      datetime="{{ configuration:start_date }}">{{ configuration:start_date format="M d" }}</time>-<time
                      datetime="{{ configuration:start_date }}">{{ configuration:start_date format="d" }}</time>
