--- a/resources/views/navigation/_main_mobile.antlers.html
+++ b/resources/views/navigation/_main_mobile.antlers.html
@@ -14,47 +14,53 @@
 >
     <button
         @click.prevent.stop="mobileNavOpen = !mobileNavOpen"
-        class="fixed bottom-4 right-4 z-30 "
+        class="fixed bottom-4 right-4"
         :aria-label="mobileNavOpen ? '{{ trans:strings.nav_close }}' : '{{ trans:strings.nav_open }}'"
         :aria-expanded="mobileNavOpen"
        
-    >{{ partial:components/logo width="120" class="z-50"}}</button>
+    >{{ partial:components/logo width="120" class=""}}</button>
 
     <div
-        class="fixed inset-0 z-20 pt-8 px-8 pb-12 flex flex-col justify-end bg-dark-blue/90"
+        class="fixed inset-0 z-20 pt-8 px-8 pb-12 flex flex-col justify-end bg-dark-blue/95"
         x-show="mobileNavOpen"
         x-transition.origin.bottom.right
     >
-        <ul class="flex flex-col py-2 gap-y-3 overflow-auto mb-8">
-            {{ nav:main max_depth="2" include_home="true" select="title|url" }}
+    <div class="absolute bottom-5 right-8 items-center p-1 hover:cursor-pointer" x-on:click="mobileNavOpen = false">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="w-10 h-10" stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+          </svg>
+        
+    </div>
+        <ul class="flex flex-col py-2 gap-y-4 overflow-auto mb-8">
+            <li
+            class="relative leading-none"
+        >
+            <a
+                @click="mobileNavOpen = false"  
+                class="
+                    flex items-center font-mono text-xl hover:text-primary"
+                    href="#artists"
+                
+        
+            >
+                Artists
+
+            </a>
+
+
+            
+        </li>
+            {{ nav:main max_depth="1" include_home="true" select="title|url" }}
                 {{ unless no_results }}
-                {{ nav:main max_depth="2" include_home="true" select="title|url" }}
-                {{ unless no_results }}
-                        <li
-                        class="relative leading-none"
-                    >
-                        <a
-                            @click="mobileNavOpen = false"  
-                            class="
-                                flex items-center font-mono text-lg hover:text-primary"
-                                href="#artists"
-                            
-                    
-                        >
-                            Artists
-
-                        </a>
 
 
-                        
-                    </li>
                     <li
                         class="relative leading-none"
                     >
                         <a
                             @click="mobileNavOpen = false"
                             class="
-                                flex items-center font-mono text-lg hover:text-primary"
+                                flex items-center font-mono text-xl hover:text-primary"
                                 href="#{{ title | slugify }}"
                             
                     
@@ -68,9 +74,28 @@
                     </li>
                 {{ /unless }}
             {{ /nav:main }}
-                {{ /unless }}
-            {{ /nav:main }}
+            <li
+            class="relative leading-none"
+        >
+            {{ social_media:social_media }}
+            <a class="flex items-center font-mono text-xl hover:text-primary"
+               href="{{ prefix }}{{ handle }}"
+               rel="noopener{{ type == 'mastodon' ?= ' me' }}"
+               aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}"
+               target="_blank">{{ type | title }}</a>
+            {{ /social_media:social_media }}
+            </li>
+            <li
+            class="relative leading-none"
+        >
+            <a target="_blank"
+            rel=""
+            class="text-black inline-block bg-primary px-4 py-3 rounded-3xl transition hover:bg-osmosis-orange"
+            href="{{ configuration:tickets_link }}">Buy tickets</a>
+            </li>
+
         </ul>
+
     </div>
 </nav>
 <!-- End: /navigation/_main_mobile.antlers.html -->
